04 10. Customers 팝업 창으로 고객 등록 페이지 구현

--- a/Hawaso/Pages/Customers/Delete.razor
+++ b/Hawaso/Pages/Customers/Delete.razor
@@ -1,36 +1,34 @@
-﻿@page "/Customers/delete/{Id:int}"
+﻿@page "/Customers/Delete/{CustomerId:int}"
+
+@attribute [AllowAnonymous]
+@* @attribute [Authorize(Roles = "Administrators")] *@
 
 <h3>Delete</h3>
 
 <div class="row">
     <div class="col-md-12">
         <div class="form-group row">
-            <label for="id" class="col-sm-2 col-form-label">Id: </label>
+            <label for="id" class="col-sm-2 col-form-label">ID: </label>
             <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="id" value="@model.Id" />
+                <input type="text" class="form-control-plaintext" id="id" value="@customer.CustomerId" />
             </div>
         </div>
         <div class="form-group row">
-            <label for="lblName" class="col-sm-2 col-form-label">Name: </label>
+            <label for="lblCustomerName" class="col-sm-2 col-form-label">Name: </label>
             <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="lblName" value="@model.Name" />
+                <input type="text" class="form-control-plaintext" id="lblCustomerName" value="@customer.CustomerName" />
             </div>
         </div>
         <div class="form-group row">
-            <label for="lblTitle" class="col-sm-2 col-form-label">Title: </label>
+            <label for="lblEmail" class="col-sm-2 col-form-label">Email: </label>
             <div class="col-sm-10">
-                <input type="text" class="form-control-plaintext" id="lblTitle" value="@model.Title" />
-            </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-sm-12">
-                @((MarkupString)content)
+                <input type="text" class="form-control-plaintext" id="lblEmail" value="@customer.EmailAddress" />
             </div>
         </div>
         <div class="form-group">
-            <a class="btn btn-danger" @onclick="DeleteClick">Delete</a>
-            <a href="/uploads/Details/@model.Id" class="btn btn-primary">Cancel</a>
-            <a href="/uploads" class="btn btn-secondary">List</a>
+            <button class="btn btn-danger" @onclick="btnDelete_Click">Delete</button>
+            <a href="/Customers/Details/@customer.CustomerId" class="btn btn-primary">Cancel</a>
+            <a href="/Customers" class="btn btn-secondary">List</a>
         </div>
     </div>
 </div>
