--- a/Hawaso/Pages/Customers/Components/CustomerEditorForm.razor
+++ b/Hawaso/Pages/Customers/Components/CustomerEditorForm.razor
@@ -1,5 +1,38 @@
-﻿<h3>CustomerEditorForm</h3>
-
-@code {
-
+﻿@if (IsShow)
+{
+    <div class="modal fade show d-block" tabindex="-1" role="dialog" id="customerEditDialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">@EditorFormTitle</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <EditForm Model="ModelEdit" OnValidSubmit="btnSaveOrUpdate_Click">
+                        <DataAnnotationsValidator></DataAnnotationsValidator>
+                        <ValidationSummary></ValidationSummary>
+                        <input type="hidden" @bind-value="@ModelEdit.CustomerId" />
+                        <div class="form-group">
+                            <label for="txtName">Name</label>
+                            <InputText id="txtName" class="form-control" placeholder="Enter Title"
+                                       @bind-Value="@ModelEdit.CustomerName"></InputText>
+                            <ValidationMessage For="@(() => ModelEdit.CustomerName)" class="form-text text-muted"></ValidationMessage>
+                        </div>
+                        <div class="form-group">
+                            <label for="txtEmail">Email</label>
+                            <InputText id="txtEmail" class="form-control" placeholder="Enter Content"
+                                       @bind-Value="@ModelEdit.EmailAddress"></InputText>
+                            <ValidationMessage For="@(() => ModelEdit.EmailAddress)" class="form-text text-muted"></ValidationMessage>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="Close">Cancel</button>
+                        </div>
+                    </EditForm>
+                </div>
+            </div>
+        </div>
+    </div>
 }
