--- a/Hawaso/Pages/Customers/Manage.razor
+++ b/Hawaso/Pages/Customers/Manage.razor
@@ -64,7 +64,7 @@ else
                         <a href="/Customers/Delete/@customer.CustomerId" class="btn btn-light">Delete</a>
                     </td>
                     <AuthorizeView>
-                        <Authorized>
+                        <NotAuthorized>
                             <td>
                                 <input type="button" value="Edit(Modal)" class="btn btn-primary" data-toggle="modal"
                                        data-target="#customerEditDialog" @onclick="@(() => EditBy(customer))" />
@@ -77,7 +77,7 @@ else
                                 <input type="button" value="Toggle(Modal)" class="btn btn-primary" data-toggle="modal"
                                        data-target="#customerToggleDialog" @onclick="@(() => ToggleBy(customer))" />
                             </td>
-                        </Authorized>
+                        </NotAuthorized>
                     </AuthorizeView>
                 </tr>
             }
