--- a/ArticleAppBlazorServer/_Imports.razor
+++ b/ArticleAppBlazorServer/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using ArticleAppBlazorServer
 @using ArticleAppBlazorServer.Shared
+@using ArticleAppBlazorServer.Models
 
 @using ArticleApp.Models;
 @using MatBlazor;
