09_02_Blazor Server에서 쿠키 인증을 사용하여 로그아웃 처리하기

--- a/Hawaso.Cookies/Shared/LoginDisplay.razor
+++ b/Hawaso.Cookies/Shared/LoginDisplay.razor
@@ -4,6 +4,10 @@
         <form method="post" action="Identity/Account/LogOut">
             <button type="submit" class="nav-link btn btn-link">Log out</button>
         </form>
+        @* <a href="/Logout">Log out Cookies</a> *@
+        <form method="post" action="/LogOut">
+            <button type="submit" class="nav-link btn btn-link">Log out Cookies</button>
+        </form>
     </Authorized>
     <NotAuthorized>
         <a href="Identity/Account/Register">Register</a>
