09_03_Blazor Server에서 쿠키 인증으로 인증된 사용자 이름 표시 및 인증된 사용자만 접근 가능한 페이지 만들기

--- a/Hawaso.Cookies/Shared/LoginDisplay.razor
+++ b/Hawaso.Cookies/Shared/LoginDisplay.razor
@@ -1,6 +1,6 @@
 ﻿<AuthorizeView>
     <Authorized>
-        <a href="Identity/Account/Manage">Hello, @context.User.Identity?.Name!</a>
+        <a href="Identity/Account/Manage">@context.User.Identity?.Name 님 안녕하세요.</a>
         <form method="post" action="Identity/Account/LogOut">
             <button type="submit" class="nav-link btn btn-link">Log out</button>
         </form>
