[공개 강의] Claim 개체에 저장된 데이터를 ASP.NET Core와 Blazor에서 사용.,, https://github.com/VisualAcademy/HawasoCookies/blob/master/Hawaso/App.razor

--- a/Hawaso.Cookies/Pages/FetchData.razor
+++ b/Hawaso.Cookies/Pages/FetchData.razor
@@ -38,11 +38,34 @@ else
     </table>
 }
 
+<hr />
+@if (Job != null)
+{
+    <text>현재 접속자의 이름은 @(Name)이고 직업은 @(Job)입니다.</text>
+}
+
 @code {
-    private WeatherForecast[]? forecasts;
+    private WeatherForecast[] forecasts;
+
+    public string Job { get; set; }
+    public string Name { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        var authState = await AuthenticationStateRef;
+        if (authState.User.Identity.IsAuthenticated)
+        {
+            if (authState.User.Identity.Name == "박용준")
+            {
+                forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+            }
+
+            //[2] Claims에 저장된 값 출력
+            Name = authState.User.Claims.FirstOrDefault(c => c.Type == "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name")?.Value;
+            Job = authState.User.Claims.FirstOrDefault(c => c.Type == "Job").Value;
+        }
     }
+
+    [CascadingParameter]
+    public Task<AuthenticationState> AuthenticationStateRef { get; set; }
 }
