--- a/Hawaso.Cookies/Views/Login/Index.cshtml
+++ b/Hawaso.Cookies/Views/Login/Index.cshtml
@@ -21,3 +21,11 @@
         </div>
     </div>    
 </form>
+<hr />
+
+@if (User.Identity.IsAuthenticated)
+{
+    <text>@User.Claims.FirstOrDefault(c => c.Type == "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name")?.Value</text>
+    <text>@User.Claims.FirstOrDefault(c => c.Type == "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress")?.Value</text>
+    <text>@User.Claims.FirstOrDefault(c => c.Type == "Job").Value</text>
+}
