3. Blazor Part 3: 회사 홈페이지 만들기 https://www.youtube.com/playlist?list=PLO56HZSjrPTA-EJxyqiN8HzItM7nDEb11 완료

--- a/Hawaso.Cookies/_Imports.razor
+++ b/Hawaso.Cookies/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Hawaso.Cookies
 @using Hawaso.Cookies.Shared
+
+@using Blazored.Toast.Services
+@using ArticleApp.Models
