--- a/Hawaso.Cookies/Pages/_Layout.cshtml
+++ b/Hawaso.Cookies/Pages/_Layout.cshtml
@@ -26,7 +26,8 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
+    <script src="~/lib/jquery.js"></script>
+    <script src="~/lib/dist/js/bootstrap.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
