--- a/Hawaso.Cookies/Shared/NavMenu.razor
+++ b/Hawaso.Cookies/Shared/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="manufacturers">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> manufacturers
+            </NavLink>
+        </div>
     </nav>
 </div>
 
