--- a/Hawaso/Pages/_Layout.cshtml
+++ b/Hawaso/Pages/_Layout.cshtml
@@ -8,6 +8,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
+    @*운영 환경에서는 최소 버전의 jQuery와 Bootstrap 사용*@
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <!-- Custom fonts for this template-->
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link href="~/templates/dashboard/css/styles.css" rel="stylesheet" />
@@ -158,8 +160,13 @@
             </footer>
         </div>
     </div>
-    <script src="_framework/blazor.server.js"></script>
+    
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
 
+
+    <script src="_framework/blazor.server.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="~/templates/dashboard/js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
